Fixing header links

--- a/header.html
+++ b/header.html
@@ -8,8 +8,8 @@
 
 			<!-- Logo -->
 			<div class="columnheaderLogo">
-				<a href="/LowHP/index.html">
-					<img style="display:block; padding-top:25px; padding-bottom:25px; padding-left:10px;" src="/LowHP/images/LowHPLogo-T.png"> 
+				<a href="/Low-HP/index.html">
+					<img style="display:block; padding-top:25px; padding-bottom:25px; padding-left:10px;" src="/Low-HP/images/LowHPLogo-T.png"> 
 				</a>
 			</div>
 
@@ -30,7 +30,7 @@
 								<a class="hunterlink" style="font-size: 20px; padding-right:0px;" href="https://www.youtube.com/channel/UCGda17O9Cun5xCB4OW5uJ8A?sub_confirmation=1" target="_blank"><b><D>YouTube</D></b></a>
 							</div>
 							<div class="image">
-								<a href="https://www.youtube.com/channel/UCGda17O9Cun5xCB4OW5uJ8A?sub_confirmation=1" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/LowHP/images/icon-youtube.png"></a>
+								<a href="https://www.youtube.com/channel/UCGda17O9Cun5xCB4OW5uJ8A?sub_confirmation=1" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/Low-HP/images/icon-youtube.png"></a>
 							</div>
 						</div>
 
@@ -40,7 +40,7 @@
 								<a class="hunterlink" style="font-size: 20px; padding-right:0px;" href="https://podcasts.apple.com/us/podcast/the-low-hp-podcast/id1672813015" target="_blank"><b><D>Apple</D></b></a>
 							</div>
 							<div class="image">
-								<a href="https://podcasts.apple.com/us/podcast/the-low-hp-podcast/id1672813015" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/LowHP/images/icon-apple.png"></a>
+								<a href="https://podcasts.apple.com/us/podcast/the-low-hp-podcast/id1672813015" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/Low-HP/images/icon-apple.png"></a>
 							</div>
 						</div>
 
@@ -50,17 +50,17 @@
 								<a class="hunterlink" style="font-size: 20px; padding-right:0px;" href="https://open.spotify.com/show/64YjEAZrGdgkQk16i88Jtf" target="_blank"><b><D>Spotify</D></b></a>
 							</div>
 							<div class="image">
-								<a href="https://open.spotify.com/show/64YjEAZrGdgkQk16i88Jtf" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/LowHP/images/icon-spotify.png"></a>
+								<a href="https://open.spotify.com/show/64YjEAZrGdgkQk16i88Jtf" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/Low-HP/images/icon-spotify.png"></a>
 							</div>
 						</div>
 						
 						<!--RSS-->
 						<div class="iconContainer" style="float:left; padding-bottom:10px;">
 							<div class="text">
-								<a class="hunterlink" style="font-size: 20px; padding-right:0px;" href="https://persomatey.github.io/LowHP/thelowhppodcast.rss" target="_blank"><b><D>RSS</D></b></a>
+								<a class="hunterlink" style="font-size: 20px; padding-right:0px;" href="https://persomatey.github.io/Low-HP/thelowhppodcast.rss" target="_blank"><b><D>RSS</D></b></a>
 							</div>
 							<div class="image">
-								<a href="https://persomatey.github.io/LowHP/thelowhppodcast.rss" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/LowHP/images/icon-rss.png"></a>
+								<a href="https://persomatey.github.io/Low-HP/thelowhppodcast.rss" target="_blank"><img style="height:35px; width:35px; padding-right: 0px;" src="/Low-HP/images/icon-rss.png"></a>
 							</div>
 						</div>
 
